# filemaker-gateway

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  README.md  config.yaml  nanobot_filemaker.txt  part3.txt  pyproject.toml  test_gateway.sh
docs/adr/: 0001-gateway-pattern.md  0002-fm-driven-tools.md  0003-chat-response-format.md
docs/superpowers/plans/: 2026-07-15-odata-implementation.md  (+2 more)
filemaker_gateway/: __init__.py  __main__.py  logging_config.py  main.py
filemaker_gateway/agent/: loop.py  preprocessor.py  result.py  runner.py  spec.py
filemaker_gateway/api/: console.html  deps.py  middleware.py  router.py  schemas.py
filemaker_gateway/config/: defaults.py  loader.py  schema.py
filemaker_gateway/fm/: __init__.py  client.py  client_odata.py  errors.py
filemaker_gateway/ocr/: __init__.py  client.py
filemaker_gateway/provider/: base.py  factory.py  openai_compat.py  registry.py  specs.py
filemaker_gateway/security/: audit.py  auth.py
filemaker_gateway/session/: database.py  manager.py  models.py  repository.py
filemaker_gateway/tool/: base.py  loader.py  ocr.py  registry.py  sql.py
fm_scripts/: AI_Chat.txt  AI_NL_Query.txt  AI_OCR_Invoice.txt  README.md
tests/: conftest.py
tests/test_agent/: test_loop.py  test_preprocessor.py  test_runner.py
tests/test_api/: test_chat.py
tests/test_config/: test_fm_config.py  test_odata_config.py
tests/test_fm/: test_client.py  test_client_odata.py  test_errors.py
tests/test_session/: test_manager.py
tests/test_tool/: test_filemaker_tools.py  test_ocr.py  test_registry.py
(+9 files in other folders)
